Fixing path issue where TensorFlow complained about having a path in the form of '<some_path>:<some_other_path>:<another_path>'

--- a/TensorFlow/playbooks/TensorFlow_installation/roles/build_numpy/tasks/main.yaml
+++ b/TensorFlow/playbooks/TensorFlow_installation/roles/build_numpy/tasks/main.yaml
@@ -43,7 +43,7 @@
     CC="{{ CC }} -lblas -lgfortran -lm -std=c99" python3 setup.py build_ext --build-lib fftw --fcompiler=gnu95
   environment:
     LD_LIBRARY_PATH: '/usr/lib:/usr/lib64:/usr/lib64/atlas:/usr/local/lib:{{ GCC_LIBS }}'
-    PYTHONPATH: '{{ PYTHONPATH }}'
+    PYTHONPATH: '{{ PYTHONPATH }}:{{ NUMPY_INSTALL_DIR }}/lib/python3.6/site-packages'
   when: USE_FFTW == 'yes' and USE_OPENBLAS == 'no'
   register: numpy_fftw_log
 
@@ -65,7 +65,7 @@
     CC="{{ CC }} -lblas -lgfortran -lm -std=c99" python3 setup.py build_ext --build-lib fftw --fcompiler=gnu95
   environment:
     LD_LIBRARY_PATH: '/usr/lib:/usr/lib64:/usr/lib64/atlas:{{ GCC_LIBS }}'
-    PYTHONPATH: '{{ PYTHONPATH }}'
+    PYTHONPATH: '{{ PYTHONPATH }}:{{ NUMPY_INSTALL_DIR }}/lib/python3.6/site-packages'
   when: USE_FFTW == 'no' and USE_OPENBLAS == 'yes'
   register: numpy_openblas_log
 
