--- a/TensorFlow/playbooks/TensorFlow_installation/roles/install_numpy/tasks/main.yaml
+++ b/TensorFlow/playbooks/TensorFlow_installation/roles/install_numpy/tasks/main.yaml
@@ -10,7 +10,7 @@
     cd {{ NUMPY_BUILD_DIR }}
     CC="gcc -lblas -lgfortran" python3 setup.py install --prefix={{ NUMPY_INSTALL_DIR }}
   environment:
-    PYTHONPATH: '{{ PYTHONPATH }}'
+    PYTHONPATH: '{{ PYTHONPATH }}:{{ NUMPY_INSTALL_DIR }}/lib/python3.6/site-packages'
     LD_LIBRARY_PATH: '{{ BLAS_LIB_DIRS }}'
   when: USE_FFTW == 'yes' and USE_OPENBLAS == 'no'
 
@@ -19,6 +19,6 @@
     cd {{ NUMPY_BUILD_DIR }}
     python3 setup.py install --prefix={{ NUMPY_INSTALL_DIR }}
   environment:
-    PYTHONPATH: '{{ PYTHONPATH }}'
+    PYTHONPATH: '{{ PYTHONPATH }}:{{ NUMPY_INSTALL_DIR }}/lib/python3.6/site-packages'
     LD_LIBRARY_PATH: '{{ BLAS_LIB_DIRS }}'
   when: USE_FFTW == 'no' and USE_OPENBLAS == 'yes'
