--- a/OpenBLAS/playbooks/package_installation/play.yaml
+++ b/OpenBLAS/playbooks/package_installation/play.yaml
@@ -5,75 +5,15 @@
   connection: local
 
   vars:
-    RHEL_VERSION: '{{ rhel_version | default("7") }}'
+    rhel_ver: '{{ rhel_version | default("7") }}'
+    use_s2i: '{{ s2i | default("no") }}'
+    use_ubi: '{{ ubi | default("no") }}'
 
-  tasks:
-  - name: yum update (if using RHEL 7)
-    yum: name=* state=latest
-    when: RHEL_VERSION == "7"
+  roles:
+    # Installs OpenBLAS prerequisites on RHEL 7 for ubi/s2i and non-ubi/non-s2i images
+    - role: rhel7
+      when: rhel_ver == '7'
 
-  - name: Install EPEL (if using RHEL 7)
-    yum: pkg=https://dl.fedoraproject.org/pub/epel/epel-release-latest-7.noarch.rpm
-    when: RHEL_VERSION == "7"
-
-  - name: Install yum prereqs (if using RHEL 7)
-    yum:
-      name:
-        - automake
-        - bzip2
-        - cpp
-        - gcc
-        - gcc-c++
-        - gcc-gfortran
-        - git
-        - gyp
-        - libdb-devel
-        - libgfortran
-        - libquadmath
-        - libquadmath-devel
-        - libtool
-        - make
-        - patch
-        - perl
-        - perl-interpreter
-        - perl-libs
-        - python36-setuptools
-        - wget
-        - zlib-devel
-      state: present
-    when: RHEL_VERSION == "7"
-
-  - name: dnf update (if using RHEL 8)
-    dnf: name=* state=latest
-    when: RHEL_VERSION == "8"
-
-  - name: Install dnf prereqs (if using RHEL 8)
-    dnf:
-      name:
-        - automake
-        - bzip2
-        - cpio
-        - cpp
-        - gcc
-        - gcc-c++
-        - gcc-gfortran
-        - git
-        - gyp
-        - libdb-devel
-        - libgfortran
-        - libquadmath
-        - libquadmath-devel
-        - libtool
-        - make
-        - nspr
-        - nss
-        - patch
-        - perl
-        - perl-interpreter
-        - perl-libs
-        - python36-python-setuptools
-        - wget
-        - yum-utils
-        - zlib-devel
-      state: present
-    when: RHEL_VERSION == "8"
+    # Installs OpenBLAS prerequisites on RHEL 8 for ubi/s2i and non-ubi/non-s2i images
+    - role: rhel8
+      when: rhel_ver == '8'
