--- a/TensorFlow/OpenShift/templates/nfd/instance/job/gpu/tensorflow-nfd-build-job.yaml
+++ b/TensorFlow/OpenShift/templates/nfd/instance/job/gpu/tensorflow-nfd-build-job.yaml
@@ -23,7 +23,31 @@ objects:
         - name: "${APP_NAME}"
           image: "${REGISTRY}/${NAMESPACE}/${IMAGESTREAM_NAME}:latest"
           command: ["/usr/libexec/s2i/run"]
-          args: ["${RHEL_VERSION}", "gpu", "${NUM_GPUS}", "${CC}", "${WHICH_SOURCE}", "${PYTHON_EXECUTABLE}", "${NCCL_URL}", "${CUDNN_URL}", "${AWS_PROFILE}", "${AWS_REGION}", "${AWS_ACCESS_KEY}", "${AWS_SECRET_ACCESS_KEY}"]
+          env:
+            - name: "RHEL_VERSION"
+              value: "${RHEL_VERSION}"
+            - name: "DEVICE"
+              value: "gpu"
+            - name: "NUM_DEVICES"
+              value: "${NUM_GPUS}"
+            - name: "CC"
+              value: "${CC}"
+            - name: "WHICH_SOURCE"
+              value: "${WHICH_SOURCE}"
+            - name: "PYTHON_EXECUTABLE"
+              value: "${PYTHON_EXECUTABLE}"
+            - name: "NCCL"
+              value: "${NCCL_URL}"
+            - name: "CUDNN"
+              value: "${CUDNN_URL}"
+            - name: "AWS_PROFILE"
+              value: "${AWS_PROFILE}"
+            - name: "AWS_REGION"
+              value: "${AWS_REGION}"
+            - name: "AWS_ACCESS_KEY"
+              value: "${AWS_ACCESS_KEY}"
+            - name: "AWS_SECRET_ACCESS_KEY"
+              value: "${AWS_SECRET_ACCESS_KEY}"
           volumeMounts:
             - mountPath: "/tmp/nvidia_ebs"
               name: "nvidia-packages-pv"
