--- a/TensorFlow/OpenShift/templates/nfd/instruction_sets/avx512/job/default/tensorflow-nfd-benchmarks-job.yaml
+++ b/TensorFlow/OpenShift/templates/nfd/instruction_sets/avx512/job/default/tensorflow-nfd-benchmarks-job.yaml
@@ -2,9 +2,9 @@ apiVersion: "v1"
 kind: "Template"
 metadata:
   annotations:
-    description: "Template to run AVX2 TensorFlow build job with CPU Manager"
-    tags: "tensorflow-avx2-nfd-cpu-manager-build-job"
-  name: "tensorflow-avx2-nfd-cpu-manager-build-job"
+    description: "Template to run the TensorFlow benchmarks on the CPU with CPU Manager"
+    tags: "tensorflow-nfd-benchmarks-job-avx512"
+  name: "tensorflow-nfd-benchmarks-job-avx512"
 objects:
 - apiVersion: "batch/v1"
   kind: "Job"
@@ -22,20 +22,21 @@ objects:
         containers:
         - name: "${APP_NAME}"
           image: "${REGISTRY}/${NAMESPACE}/${IMAGESTREAM_NAME}:latest"
-          command: ["/usr/libexec/s2i/run"]
+          command: ["sh", "-c"]
+          args:
+            - "cd /mnt/tensorflow_ebs"
+            - "ansible-playbook -i hosts play.yaml --extra-vars='{tensorflow_install_dir: \"${TENSORFLOW_TOP_DIR}/${BACKEND}_backend/tensorflow\", device_type: \"${DEVICE}\", benchmarks_path: \"${BENCHMARKS_PATH}\", num_devices: \"${NUM_DEVICES}\"}'"]
           env:
-            - name: "RHEL_VERSION"
-              value: "${RHEL_VERSION}"
+            - name: "TENSORFLOW_TOP_DIR"
+              value: "/mnt/tensorflow_ebs/tensorflow-cpu"
             - name: "DEVICE"
               value: "cpu"
+            - name: "BENCHMARKS_PATH"
+              value: "/home/benchmarks"
             - name: "NUM_DEVICES"
               value: "${NUM_CPUS}"
-            - name: "CC"
-              value: "${CC}"
-            - name: "WHICH_SOURCE"
-              value: "none"
-            - name: "PYTHON_EXECUTABLE"
-              value: "${PYTHON_EXECUTABLE}"
+            - name: "BACKEND"
+              value: "${BACKEND}"
           volumeMounts:
             - mountPath: "/mnt/tensorflow_ebs"
               name: "tensorflow-pv"
@@ -49,39 +50,30 @@ objects:
             requiredDuringSchedulingIgnoredDuringExecution:
               nodeSelectorTerms:
               - matchExpressions:
-                - key: "feature.node.kubernetes.io/cpuid-AVX2"
-                  operator: "Exists"
                 - key: "feature.node.kubernetes.io/cpuid-AVX512BW"
-                  operator: "DoesNotExist"
+                  operator: "Exists"
+              - matchExpressions:
                 - key: "feature.node.kubernetes.io/cpuid-AVX512CD"
-                  operator: "DoesNotExist"
+                  operator: "Exists"
+              - matchExpressions:
                 - key: "feature.node.kubernetes.io/cpuid-AVX512DQ"
-                  operator: "DoesNotExist"
+                  operator: "Exists"
+              - matchExpressions:
                 - key: "feature.node.kubernetes.io/cpuid-AVX512F"
-                  operator: "DoesNotExist"
+                  operator: "Exists"
+              - matchExpressions:
                 - key: "feature.node.kubernetes.io/cpuid-AVX512VL"
-                  operator: "DoesNotExist"
-                - key: "cpumanager"
-                  operator: "In"
-                  values:
-                  - "true"
-        resources:
-          requests:
-            cpu: "${N_CPUS}"
-            memory: "${MEMORY_SIZE}"
-          limits:
-            cpu: "${N_CPUS}"
-            memory: "${MEMORY_SIZE}"
+                  operator: "Exists"
 parameters:
 - description: "ImageStream name"
   name: "IMAGESTREAM_NAME"
   from: '[A-Z0-9]{10}'
-  value: "tensorflow-rhel7-avx2"
+  value: "tensorflow-rhel7"
   required: true 
-- description: "TensorFlow benchmark app name"
+- description: "TensorFlow CPU Manager app name"
   name: "APP_NAME"
   from: '[A-Z0-9]{20}'
-  value: "tensorflow-s2i-benchmark-app-rhel7-avx2-cpu-manager"
+  value: "tensorflow-benchmarks-app"
   required: true
 - description: "Registry route. Use `oc registry info` to get the route after exposing it."
   name: "REGISTRY"
@@ -92,24 +84,22 @@ parameters:
   from: '[A-Z0-9]{15}'
   value: "openshift-image-registry"
   required: true
+- description: "AWS instance type"
+  name: "INSTANCE_TYPE"
+  value: "m4.xlarge"
+  required: true
 - description: "RHEL version to use"
   name: "RHEL_VERSION"
   from: '[0-9]{1}'
   value: "7"
   required: true
-- description: "Path to Python executable"
-  name: "PYTHON_EXECUTABLE"
-  value: "/usr/bin/python3"
-  required: true
-- description: "Number of CPUs to use"
+- description: "Number of CPUs to use (must be an integer)"
   name: "NUM_CPUS"
-  value: "1"
-  required: true
-- description: "Memory size"
-  name: "MEMORY_SIZE"
-  value: "1G"
-  required: true
-- description: "Path to gcc"
-  name: "CC"
-  value: "/usr/bin/gcc"
-  required: true
+  from: '[0-9]{5}'
+  value: ""
+  required: false
+- description: "Backend -- Either 'fftw' or 'openblas'"
+  name: "BACKEND"
+  from: '[A-Z]{8}'
+  value: "fftw"
+  required: false
