--- a/TensorFlow/OpenShift/templates/nfd/instruction_sets/avx512/job/cpu_manager/tensorflow-nfd-benchmarks-job.yaml
+++ b/TensorFlow/OpenShift/templates/nfd/instruction_sets/avx512/job/cpu_manager/tensorflow-nfd-benchmarks-job.yaml
@@ -2,9 +2,9 @@ apiVersion: "v1"
 kind: "Template"
 metadata:
   annotations:
-    description: "Template to run the TensorFlow benchmarks on the CPU with CPU Manager"
-    tags: "tensorflow-nfd-benchmarks-job-avx-cpu-mgr"
-  name: "tensorflow-nfd-benchmarks-job-avx-cpu-mgr"
+    description: "Template to run the AVX512 TensorFlow benchmarks on the CPU with CPU Manager"
+    tags: "tensorflow-nfd-benchmarks-job-avx512-cpu-mgr"
+  name: "tensorflow-nfd-benchmarks-job-avx512-cpu-mgr"
 objects:
 - apiVersion: "batch/v1"
   kind: "Job"
@@ -25,7 +25,7 @@ objects:
           command: ["sh", "-c"]
           args:
             - "cd /mnt/tensorflow_ebs"
-            - "ansible-playbook -i hosts play.yaml --extra-vars='{tensorflow_install_dir: \"${TENSORFLOW_TOP_DIR}/${BACKEND}_backend/tensorflow\", device_type: \"${DEVICE}\", benchmarks_path: \"${BENCHMARKS_PATH}\", num_devices: \"${NUM_DEVICES}\"}'"]
+            - "ansible-playbook -i hosts play.yaml --extra-vars='{tensorflow_install_dir: \"${TENSORFLOW_TOP_DIR}/${BACKEND}_backend/tensorflow\", device_type: \"${DEVICE}\", benchmarks_path: \"${BENCHMARKS_PATH}\", num_devices: \"${NUM_DEVICES}\"}'"
           env:
             - name: "TENSORFLOW_TOP_DIR"
               value: "/mnt/tensorflow_ebs/tensorflow-cpu"
