Adding new Makefiles for doing specific things regarding image pulling and pushing. Making instructions easier + updating READMEs

--- a/TensorFlow/OpenShift/setup/images/Makefile
+++ b/TensorFlow/OpenShift/setup/images/Makefile
@@ -1,20 +1,14 @@
-REDHAT_IO_REGISTRY_SECRET_FILE=../../../../secrets/redhat_io_registry.yaml
-REDHAT_IO_PULL_SECRET=$(shell while IFS=" " read -r t || [ -n "$$t" ]; do \
-	    if [[ "$$t" == "name:"* ]]; then echo $$t | cut -d ' ' -f 2 && break; fi; \
-done < "$(REDHAT_IO_REGISTRY_SECRET_FILE)")
 
-OPENSHIFT_TOKEN=$(shell oc serviceaccounts get-token 'builder')
+CONFIG = $(KUBECONFIG)
 
-all: redhat_io_secret openshift_secret
+all: secrets cuda_rhel7
 
-redhat_io_secret:
-	oc create -f $(REDHAT_IO_REGISTRY_SECRET_FILE) --namespace=openshift-image-registry
-	oc secrets add serviceaccount/default secrets/$(REDHAT_IO_PULL_SECRET) --for=pull --namespace=openshift-image-registry
+secrets:
+	$(MAKE) -f Makefile.secrets
 
-openshift_secret:
-	oc project openshift-image-registry
-	oc secrets new-dockercfg openshift-image-registry-pull-secret --docker-server=image-registry.openshift-image-registry.svc:5000 --docker-username=default --docker-password=$(OPENSHIFT_TOKEN) --docker-email=null
+cuda_rhel7:
+	$(MAKE) KUBECONFIG=$(CONFIG) -f Makefile.cuda_rhel7
 
 clean:
-	oc delete -f $(REDHAT_IO_REGISTRY_SECRET_FILE)
-	oc delete secret/openshift-image-registry-pull-secret
+	$(MAKE) -f Makefile.secrets clean
+	$(MAKE) -f Makefile.cuda_rhel7 clean
