Updating Makefiles and READMEs so that users can easily build CUDA RHEL 8 images too

--- a/TensorFlow/OpenShift/setup/images/Makefile
+++ b/TensorFlow/OpenShift/setup/images/Makefile
@@ -9,6 +9,10 @@ secrets:
 cuda_rhel7:
 	$(MAKE) KUBECONFIG=$(CONFIG) -f Makefile.cuda_rhel7
 
+cuda_rhel8:
+	$(MAKE) KUBECONFIG=$(CONFIG) -f Makefile.cuda_rhel8
+
 clean:
 	$(MAKE) -f Makefile.secrets clean
 	$(MAKE) -f Makefile.cuda_rhel7 clean
+	$(MAKE) -f Makefile.cuda_rhel8 clean
