Add 'ignore_errors' so that an empty 'ls' output does not cause the playbook to fail

--- a/TensorFlow/playbooks/package_installation/roles/python3_numpy/tasks/main.yaml
+++ b/TensorFlow/playbooks/package_installation/roles/python3_numpy/tasks/main.yaml
@@ -172,6 +172,7 @@
   - name: << s2i/ubi only >> Check for any existing LZ4 binaries/symlinks
     shell: ls /usr/local/bin | grep lz4
     register: lz4_executables
+    ignore_errors: yes
 
   - name: << s2i/ubi only >> Remove LZ4 symlinks
     command: rm '{{ item }}'
