--- a/TensorFlow/Dockerfiles/FFTW_backend/Dockerfile.openshift_rhel7_cuda10
+++ b/TensorFlow/Dockerfiles/FFTW_backend/Dockerfile.openshift_rhel7_cuda10
@@ -106,7 +106,7 @@ RUN cd ${FFTW_PREREQS_PLAYBOOK} && \
 # Create and give user permissions to modify certain directories that are required to run the Ansible
 # playbooks that are being pulled into this Dockerfile. Also allow /usr/local/cuda to be writable and
 # allow /.aws to be writeable in case the user wants to use an AWS s3 bucket to download NCCL + cuDNN
-RUN chmod 777 /usr/libexec/s2i/run && \
+RUN chmod 777 -R /usr/libexec/s2i && \
     chmod g=u /etc/passwd /etc/group && \
     mkdir -p ${TOPDIR}/.ansible/tmp && \
     chmod -R 777 ${TOPDIR}/.ansible && \
